fix: configure test jvm to avoid modern java warnings
Preloads the Byte Buddy agent and permits unsafe memory access to prevent warnings triggered by testing libraries like MockK on recent JDKs.